# projeto3

./: README.md  pyproject.toml
projeto_retas/: main.py
projeto_retas/graphic/: graphic.py
projeto_retas/pictures/: picture.py
