[tool.poetry]
name = "projeto-retas"
version = "0.2.0"
description = ""
authors = ["Talisson Avila <talisson_avila@hotmail.com>"]
readme = "README.md"
packages = [{include = "projeto_retas"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
matplotlib = "^3.6.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
